<resources>
    <string name="app_name">Mqtt</string>
    <string name="gearbox_storage_control">GEARBOX STORAGE CONTROL</string>
    <string name="master_control">Master Control</string>
    <string name="none">none</string>
    <string name="storage_four">STORAGE FOUR</string>
    <string name="storage_three">STORAGE THREE</string>
    <string name="storage_one">STORAGE ONE</string>
    <string name="storage_two">STORAGE TWO</string>
    <string name="gearbox_storage_access">Gearbox Storage Access</string>
    <string name="gearbox_storage_access_caps">GEARBOX STORAGE ACCESS</string>
    <string name="powered_by">Powered by:</string>
    <string name="logo">logo</string>
</resources>