<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f3f3f3"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/topNavBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/head_navbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/gearbox_storage_control"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/disconnectBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:onClick="disconnect"
            android:src="@drawable/ic_baseline_stop_circle_24"
            android:contentDescription="@string/none" />
    </LinearLayout>



    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_below="@id/topNavBar"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/closet1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/none"
                    android:src="@drawable/closet" />

                <TextView
                    android:id="@+id/tvStorage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_one"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/closet1"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCloset1"
                    android:layout_below="@id/tvStorage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.5"
                    android:scaleX="1.5"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/closet2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/none"
                    android:src="@drawable/closet" />

                <TextView
                    android:id="@+id/tvStorage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_two"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/closet2"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCloset2"
                    android:layout_below="@id/tvStorage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.5"
                    android:scaleX="1.5"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/closet3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/none"
                    android:src="@drawable/closet" />

                <TextView
                    android:id="@+id/tvStorage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_three"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/closet3"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCloset3"
                    android:layout_below="@id/tvStorage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.5"
                    android:scaleX="1.5"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/closet4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/none"
                    android:src="@drawable/closet" />

                <TextView
                    android:id="@+id/tvStorage4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_four"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/closet4"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCloset4"
                    android:layout_below="@id/tvStorage4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleY="1.5"
                    android:scaleX="1.5"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_control"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchClosetMaster"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="2"
            android:scaleY="2" />





    </LinearLayout>




</RelativeLayout>